updated few changes

--- a/TASK 2/index.html
+++ b/TASK 2/index.html
@@ -32,7 +32,7 @@
     }
 
     .hero-section {
-      background-image: url("4503668370293489.jpeg");
+     background-image: url(Screenshot\ 2025-07-28\ 231029.png);
       background-size: cover;
       background-position: right center;
       background-repeat: no-repeat;
